2014-03-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (yybadtoken): Add missing cases for new token
	types WORDS and WSPLICE.

2014-03-25  Kaz Kylheku  <kaz@kylheku.com>

	Introducing word list literals.

	* parser.l (WLIT): New exclusive start state.
	Extend lexical grammar to transition to WLIT state upon
	the #" or #*" sequence which kicks off a word literal,
	and in that state, piecewise lexically analyze the literal,
	mostly by borrowing rules from other literals.

	* parser.y (WORDS, WSPLICE): New tokens.
	(n_exprs): Integrate splicing form of word list literal syntax.
	(n_expr): Integrate non-splicit for of word list literal syntax.
	(litchars): Propagate line number info.
	(wordslit): New grammar rule.

	* txr.1: Updated.

2014-03-23  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register last function as intrinsic.

	* lib.c (last): New function.

	* lib.h (last): Declared.

	* txr.1: Documented last.

2014-03-23  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register empty as intrinsic.

	* lib.c (copy): Bugfix: handle lazy strings. Also, handle hash
	tables via copy_hash.
	(length): Bugifx: handle lazy strings. Also, handle hash tables
	via hash_count.
	(empty): New function.

	* lib.h (empty): Declared.

	* txr.1: Documented.

2014-03-23  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (not_s): New symbol var.
	(me_unless, me_while, m_until): New static functions.
	(eval_init): Register macros unless, while and until.

	* txr.1: Document unless, while and until.

2014-03-22  Kaz Kylheku  <kaz@kylheku.com>

	Version 87

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated

	* txr.vim: Regenerated.

2014-03-22  Kaz Kylheku  <kaz@kylheku.com>

	* utf8.c (w_fopen, w_popen, w_freopen, w_remove, w_rename): Revert
	2014-03-14 changes.

2014-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (me_when): New static function.
	(eval_init): Register "when" macro.
